Fix: text no longer overlaps navigation bar

--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ body, html {
 /* Create two columns/boxes that floats next to each other */
 nav {
   float: left;
-  width: 10%;
   background: white;
   padding: 20px;
 }
@@ -48,7 +47,6 @@ li a:hover {
 article {
   float: left;
   padding: 10px;
-  width: 80%;
   background-color: white;
 }
 
